# imageLab

./: .gitignore  README.md
backend/ai/: Dockerfile  pom.xml
backend/ai/src/main/resources/: application.properties
backend/auth/: Dockerfile  pom.xml
backend/auth/src/main/resources/: application.properties
backend/config/: pom.xml
backend/docker/: .env.example  docker-compose.yml  path.yaml  traefik.yml
backend/image/: Dockerfile  pom.xml
backend/image/src/main/resources/: application.properties
backend/opencv-processor/: CMakeLists.txt
backend/opencv-processor/src/: criminisi.cpp  criminisi.h  main.cpp  poisson_editing.cpp  poisson_editing.h  seam_carving.cpp  seam_carving.h
backend/security/: pom.xml
backend/user/: Dockerfile  pom.xml
backend/user/src/main/resources/: application.properties
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: index.css
frontend/src/app/: App.jsx  AppRoutes.jsx
frontend/src/components/: AdminRoute.jsx  Footer.jsx  ImageAnalyticsDashboard.jsx  ImageChart.jsx  Navbar.jsx  ProtectedRoute.jsx
frontend/src/data/: mockImages.js
frontend/src/layouts/: MainLayout.jsx
frontend/src/lib/: api.js
frontend/src/pages/admin/: AdminUsersPage.jsx
frontend/src/pages/dashboard/: DashboardPage.jsx
frontend/src/pages/editor/: EditorPage.jsx
frontend/src/pages/editor/components/: BrushSizeControl.jsx  ToolButton.jsx  (+6 more)
frontend/src/pages/home/: HomePage.jsx
frontend/src/pages/login/: LoginPage.jsx
frontend/src/pages/register/: RegisterPage.jsx
frontend/src/store/: authStore.js
(+68 files in other folders)
